# docker-workshop

./: README.md
pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  output_month_12.parquet  pipeline.py  pyproject.toml
